# async-executor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  rust-toolchain  shell.nix
.cargo/: config.wasmer.toml
.github/workflows/: rust.yml
example/: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json
example/src/: lib.rs
src/: lib.rs  single_threaded.rs
