[package]
name = "wasm-rs-async-executor"
version = "0.6.1-dev"
authors = ["Yurii Rashkovskii <yrashk@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Async executor for WebAssembly"
repository = "https://github.com/wasm-rs/async-executor"
documentation = "https://docs.rs/wasm-rs-async-executor"
readme = "README.md"
keywords = ["wasm", "async"]

[lib]
crate-type = ["cdylib","lib"]

[dependencies]
futures = { version = "0.3.12", features = ["std"] }
js-sys = { version = "0.3.47", optional = true }
pin-project = { version = "1.0.5", optional = true }
wasm-bindgen = { version = "0.2.70", optional = true }
web-sys = { version = "0.3.47", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["sync", "rt"] }

[features]
default = []
debug = []
cooperative = ["js-sys", "wasm-bindgen", "pin-project"]
cooperative-browser = ["cooperative"]
# Experimental:
# https://developer.mozilla.org/en-US/docs/Web/API/Window/requestIdleCallback
requestIdleCallback = ["cooperative-browser", "web-sys/IdleDeadline"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.wasm.rs]
targets = ["wasm32-unknown-unknown"]
wasm-readme = "README.md"
